--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lobo - Desenvolvedor Front End</title>
     <meta name="description" content="Desenvolvedor Front End, Localizado no Recife">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="/img/detalhe.svg">
 </head>
 <body>
