--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Lobo - Desenvolvedor Front End</title>
     <meta name="description" content="Desenvolvedor Front End, Localizado no Recife">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/introducao.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./css/experiencia.css">
+    <link rel="stylesheet" href="./css/formacao.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link rel="icon" href="/img/detalhe.svg">
 </head>
 <body>
