--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="/img/marca.svg" alt="Lobo">
+        <img src="./img/marca.svg" alt="Lobo">
         <nav>
             <ul class="header_menu">
                 <li><a href="#experiencia">Experiência</a></li>
